--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "rxjs": "^7.8.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.54.0"
+  },
+  "dependencies": {
+    "zod": "^4.3.6"
   }
 }
