--- a/package.json
+++ b/package.json
@@ -2,9 +2,18 @@
   "name": "clxdb",
   "version": "1.0.0",
   "description": "The BYOC(Bring your own cloud) local-first synchronized db",
-  "main": "dist/index.js",
+  "main": "dist/clxdb.umd.cjs",
+  "module": "dist/clxdb.js",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/clxdb.js",
+      "require": "./dist/clxdb.umd.cjs"
+    }
+  },
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
     "typecheck": "tsc --noEmit",
     "lint": "eslint ."
   },
@@ -15,18 +24,29 @@
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@stylistic/eslint-plugin": "^5.8.0",
+    "@tailwindcss/vite": "^4.1.18",
+    "@types/node": "^25.2.3",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react-swc": "^4.2.3",
+    "autoprefixer": "^10.4.24",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-prettier": "^5.5.5",
+    "postcss": "^8.5.6",
     "prettier": "^3.8.1",
     "rxdb": "17.0.0-beta.7",
     "rxjs": "^7.8.2",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.54.0"
+    "typescript-eslint": "^8.54.0",
+    "vite": "^7.3.1"
   },
   "dependencies": {
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "zod": "^4.3.6"
   }
 }
