--- a/package.json
+++ b/package.json
@@ -37,14 +37,13 @@
     "eslint-plugin-prettier": "^5.5.5",
     "postcss": "^8.5.6",
     "prettier": "^3.8.1",
-    "rxdb": "17.0.0-beta.7",
-    "rxjs": "^7.8.2",
     "tailwindcss": "^4.1.18",
-    "typescript": "^5.9.3",
+    "typescript": "6.0.0-beta",
     "typescript-eslint": "^8.54.0",
     "vite": "^7.3.1"
   },
   "dependencies": {
+    "dexie": "^4.3.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "zod": "^4.3.6"
