feat: add generate, deviceName

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,11 +17,16 @@
     // Types
     "target": "esnext",
     "lib": ["esnext", "dom", "dom.iterable", "dom.asynciterable"],
-    "types": ["node", "react", "react-dom"],
+    "types": [
+      "node",
+      "react",
+      "react-dom",
+      "vite/client"
+    ],
     "typeRoots": ["./node_modules", "./node_modules/@types"],
 
     // Others
-    "jsx": "react",
+    "jsx": "react-jsx",
     "allowJs": true,
     "skipLibCheck": true,
     "noEmit": true,
