--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "eslint-plugin-prettier": "^5.5.5",
     "postcss": "^8.5.6",
     "prettier": "^3.8.1",
+    "prettier-plugin-classnames": "^0.9.0",
+    "prettier-plugin-merge": "^0.9.0",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4.1.18",
     "typescript": "6.0.0-beta",
     "typescript-eslint": "^8.54.0",
