--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,7 @@
 
   "include": [
     "src/**/*.ts",
+    "src/**/*.tsx",
     "examples/**/*.ts",
     "examples/**/*.tsx",
     "eslint.config.js",
