--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
   }
 }
