feat(ui): add sync indicator

--- a/.prettierrc
+++ b/.prettierrc
@@ -11,5 +11,7 @@
     "prettier-plugin-tailwindcss",
     "prettier-plugin-classnames",
     "prettier-plugin-merge"
-  ]
+  ],
+  "customFunctions": ["classes"],
+  "tailwindFunctions": ["classes"]
 }
