fix(ui): update tailwind isolate

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,7 @@
     "src/**/*.tsx",
     "examples/**/*.ts",
     "examples/**/*.tsx",
+    "build/**/*.ts",
     "eslint.config.js",
     "vite.config.ts"
   ]
