feat(ui): save last used storage

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     ".": {
       "import": "./dist/clxdb.js",
       "require": "./dist/clxdb.cjs"
+    },
+    "./ui": {
+      "import": "./dist/ui.js",
+      "require": "./dist/ui.cjs"
     }
   },
   "scripts": {
