--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "tailwindcss": "^4.1.18",
-    "typescript": "6.0.0-beta",
+    "typescript": "5.9.3",
     "typescript-eslint": "^8.54.0",
     "vite": "^7.3.1",
     "vite-bundle-analyzer": "^1.3.6",
