--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "vite-plugin-dts": "^4.5.4"
   },
   "dependencies": {
+    "cors-manager": "^1.0.3",
     "cors-unblock": "^0.1.1",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
